--- a/tithonus-server/.project
+++ b/tithonus-server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Tithonus</name>
+	<name>Tithonus-server</name>
 	<comment></comment>
 	<projects>
 	</projects>
